# qwc-oblique-imagery-service

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: server.py
