[project]
name = "qwc-oblique-imagery-service"
version = "v2026.01.05"
description = "QWC oblique imagery service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask~=3.1.0",
    "Werkzeug~=3.1.1",
    "Flask-JWT-Extended~=4.7.0",
    "flask-restx~=1.3.0",
    "qwc-services-core~=1.5.0",
    "rasterio~=1.4.3",
    "pillow~=12.1.0",
    "numpy~=2.4.0",
]

[dependency-groups]
dev = [
    "flask-cors>=5.0.0",
    "python-dotenv>=1.0.1",
]
